# mifleet-python

./: manage.py  pyproject.toml
api/v1/: urls.py
authentication/: admin.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_username.py
expenses/: admin.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_expense_teacher.py
mifleet_python/: asgi.py  settings.py  urls.py  wsgi.py
teachers/: admin.py  models.py  serializers.py  urls.py  views.py
teachers/migrations/: 0001_initial.py  0002_remove_teacher_documentation_and_more.py  0003_alter_teacher_user.py
vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_alter_vehicle_image.py
